tests/expectations/compiler/function/self_recursive_cycle_fail.out
Error [ETYC0372043]: Cannot call a local entry point fn from an entry point fn.
    --> compiler-test:15:20
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                    ^^^^^^^^^^^^
Error [ETYC0372043]: Cannot call a local entry point fn from an entry point fn.
    --> compiler-test:15:35
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                                   ^^^^^^^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `test.aleo/foo` --> `test.aleo/foo`
